diagweave/tests/ui/union/display_transparent_requires_single_tuple_field.stderr
error: #[display(transparent)] requires exactly one tuple field
 --> tests/ui/union/display_transparent_requires_single_tuple_field.rs:6:9
  |
6 |         NotTuple { code: u32 },
  |         ^^^^^^^^
