diagweave/tests/ui/union/display_transparent_requires_single_tuple_field.rs
use diagweave::union;

union! {
    enum BadTransparent = {
        #[display(transparent)]
        NotTuple { code: u32 },
    }
}

fn main() {}
